--- a/static/manifest.json
+++ b/static/manifest.json
@@ -27,7 +27,7 @@
   "background": {
     "persistent": false
   },
-  "start_url": "https://exampleSite.com/",
+  "start_url": "https://djtai.github.io/",
   "theme_color": "#fff",
   "background_color": "#fff",
   "display": "standalone"
